// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Pagination ui middle: Component: Pagination => ui => middle 1`] = `
<Pagination
  aria-label="pagination"
  listTag="ul"
  tag="nav"
>
  <PaginationItem
    active={false}
    key="0"
    tag="li"
  >
    <PaginationLink
      onClick={[Function]}
      tag="a"
    >
      1
    </PaginationLink>
  </PaginationItem>
  <PaginationItem
    active={false}
    key="1"
    tag="li"
  >
    <PaginationLink
      className="disabled"
      disabled={true}
      tag="a"
    >
      ...
    </PaginationLink>
  </PaginationItem>
  <PaginationItem
    active={false}
    key="2"
    tag="li"
  >
    <PaginationLink
      onClick={[Function]}
      tag="a"
    >
      4
    </PaginationLink>
  </PaginationItem>
  <PaginationItem
    active={true}
    key="3"
    tag="li"
  >
    <PaginationLink
      onClick={[Function]}
      tag="a"
    >
      5
    </PaginationLink>
  </PaginationItem>
  <PaginationItem
    active={false}
    key="4"
    tag="li"
  >
    <PaginationLink
      onClick={[Function]}
      tag="a"
    >
      6
    </PaginationLink>
  </PaginationItem>
  <PaginationItem
    active={false}
    key="5"
    tag="li"
  >
    <PaginationLink
      className="disabled"
      disabled={true}
      tag="a"
    >
      ...
    </PaginationLink>
  </PaginationItem>
  <PaginationItem
    active={false}
    key="6"
    tag="li"
  >
    <PaginationLink
      onClick={[Function]}
      tag="a"
    >
      10
    </PaginationLink>
  </PaginationItem>
</Pagination>
`;

exports[`Component: Pagination ui no next: Component: Pagination => ui => no next 1`] = `
<Pagination
  aria-label="pagination"
  listTag="ul"
  tag="nav"
>
  <PaginationItem
    active={false}
    key="0"
    tag="li"
  >
    <PaginationLink
      onClick={[Function]}
      tag="a"
    >
      1
    </PaginationLink>
  </PaginationItem>
  <PaginationItem
    active={false}
    key="1"
    tag="li"
  >
    <PaginationLink
      className="disabled"
      disabled={true}
      tag="a"
    >
      ...
    </PaginationLink>
  </PaginationItem>
  <PaginationItem
    active={false}
    key="2"
    tag="li"
  >
    <PaginationLink
      onClick={[Function]}
      tag="a"
    >
      9
    </PaginationLink>
  </PaginationItem>
  <PaginationItem
    active={true}
    key="3"
    tag="li"
  >
    <PaginationLink
      onClick={[Function]}
      tag="a"
    >
      10
    </PaginationLink>
  </PaginationItem>
</Pagination>
`;

exports[`Component: Pagination ui no previous: Component: Pagination => ui => no previous 1`] = `
<Pagination
  aria-label="pagination"
  listTag="ul"
  tag="nav"
>
  <PaginationItem
    active={true}
    key="0"
    tag="li"
  >
    <PaginationLink
      onClick={[Function]}
      tag="a"
    >
      1
    </PaginationLink>
  </PaginationItem>
  <PaginationItem
    active={false}
    key="1"
    tag="li"
  >
    <PaginationLink
      onClick={[Function]}
      tag="a"
    >
      2
    </PaginationLink>
  </PaginationItem>
  <PaginationItem
    active={false}
    key="2"
    tag="li"
  >
    <PaginationLink
      className="disabled"
      disabled={true}
      tag="a"
    >
      ...
    </PaginationLink>
  </PaginationItem>
  <PaginationItem
    active={false}
    key="3"
    tag="li"
  >
    <PaginationLink
      onClick={[Function]}
      tag="a"
    >
      10
    </PaginationLink>
  </PaginationItem>
</Pagination>
`;

exports[`Component: Pagination ui with previous and next buttons: Component: Pagination => ui => with previous and next buttons 1`] = `
<Pagination
  aria-label="pagination"
  listTag="ul"
  tag="nav"
>
  <PaginationItem
    disabled={false}
    tag="li"
  >
    <PaginationLink
      onClick={[Function]}
      tag="a"
    >
      <Icon
        icon="arrow_back"
        size={14}
      />
    </PaginationLink>
  </PaginationItem>
  <PaginationItem
    active={false}
    key="0"
    tag="li"
  >
    <PaginationLink
      onClick={[Function]}
      tag="a"
    >
      1
    </PaginationLink>
  </PaginationItem>
  <PaginationItem
    active={false}
    key="1"
    tag="li"
  >
    <PaginationLink
      className="disabled"
      disabled={true}
      tag="a"
    >
      ...
    </PaginationLink>
  </PaginationItem>
  <PaginationItem
    active={false}
    key="2"
    tag="li"
  >
    <PaginationLink
      onClick={[Function]}
      tag="a"
    >
      4
    </PaginationLink>
  </PaginationItem>
  <PaginationItem
    active={true}
    key="3"
    tag="li"
  >
    <PaginationLink
      onClick={[Function]}
      tag="a"
    >
      5
    </PaginationLink>
  </PaginationItem>
  <PaginationItem
    active={false}
    key="4"
    tag="li"
  >
    <PaginationLink
      onClick={[Function]}
      tag="a"
    >
      6
    </PaginationLink>
  </PaginationItem>
  <PaginationItem
    active={false}
    key="5"
    tag="li"
  >
    <PaginationLink
      className="disabled"
      disabled={true}
      tag="a"
    >
      ...
    </PaginationLink>
  </PaginationItem>
  <PaginationItem
    active={false}
    key="6"
    tag="li"
  >
    <PaginationLink
      onClick={[Function]}
      tag="a"
    >
      10
    </PaginationLink>
  </PaginationItem>
  <PaginationItem
    disabled={false}
    tag="li"
  >
    <PaginationLink
      onClick={[Function]}
      tag="a"
    >
      <Icon
        icon="arrow_forward"
        size={14}
      />
    </PaginationLink>
  </PaginationItem>
</Pagination>
`;
